# fermatslastmargin

./: .gitignore  fermatslastmargin.cabal  haskell.yml  shell.nix
nix/: default.nix  sources.json  sources.nix
