cabal-version:      >=2.0
name:               fermatslastmargin
version:            0.1.0.0
license:            AGPL-3.0-or-later
license-file:       LICENSE
maintainer:         shae@scannedinavian.com
author:             Shae Erisson
homepage:           http://github.com/shapr/fermatslastmargin
synopsis:           hook javascript to pass url to server
category:           Web
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Lib
        Lib.Github

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -ferror-spans -fshow-loaded-modules -Wall
    build-depends:
        aeson -any,
        base >=4.14 && <=4.15,
        bytestring -any,
        config-schema -any,
        config-value -any,
        containers -any,
        directory -any,
        extra -any,
        filemanip -any,
        filepath -any,
        fuzzy -any,
        github -any,
        http-client -any,
        http-client-tls -any,
        http-types -any,
        lucid -any,
        process -any,
        scotty -any,
        text -any,
        time -any,
        wai-middleware-static -any

executable fermatslastmargin
    main-is:          Main.hs
    default-language: Haskell2010
    ghc-options:      -threaded -ferror-spans -fshow-loaded-modules -Wall
    build-depends:
        aeson -any,
        base >=4.14 && <=4.15,
        bytestring -any,
        config-schema -any,
        config-value -any,
        containers -any,
        directory -any,
        extra -any,
        filemanip -any,
        filepath -any,
        fuzzy -any,
        github -any,
        http-client -any,
        http-client-tls -any,
        http-types -any,
        lucid -any,
        process -any,
        scotty -any,
        text -any,
        time -any,
        wai-middleware-static -any,
        fermatslastmargin -any,
        wai-extra -any

executable migrate
    main-is:          Migrate.hs
    default-language: Haskell2010
    ghc-options:      -threaded -ferror-spans -fshow-loaded-modules -Wall
    build-depends:
        aeson -any,
        base >=4.14 && <=4.15,
        bytestring -any,
        config-schema -any,
        config-value -any,
        containers -any,
        directory -any,
        extra -any,
        filemanip -any,
        filepath -any,
        fuzzy -any,
        github -any,
        http-client -any,
        http-client-tls -any,
        http-types -any,
        lucid -any,
        process -any,
        scotty -any,
        text -any,
        time -any,
        wai-middleware-static -any,
        fermatslastmargin -any
